name:                line-bot-haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/ishiy1993/line-bot-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              ishiy
maintainer:          y.ishihara.1993@gmail.com
copyright:           Copyright: (c) 2016 ishiy
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable line-bot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lens
                     , lens-aeson
                     , scotty
                     , wreq
